[gd_scene load_steps=4 format=3 uid="uid://dbnyrqfcg7nv7"]

[ext_resource type="Script" uid="uid://bj7h17v83jd2r" path="res://player/grabby_player_gun.gd" id="1_ts3df"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p4bxy"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ts3df"]
radius = 6.0

[node name="GrabbyPlayerGun" type="Node2D"]
script = ExtResource("1_ts3df")

[node name="GrabPoint" type="Marker2D" parent="."]
position = Vector2(44, 0)

[node name="SuckInBullets" type="Area2D" parent="GrabPoint"]
collision_layer = 0
collision_mask = 32
gravity_space_override = 1
gravity_point = true
gravity_point_unit_distance = 12.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 540.0
linear_damp_space_override = 1
linear_damp = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabPoint/SuckInBullets"]
shape = SubResource("CircleShape2D_p4bxy")

[node name="Line2D" type="Line2D" parent="GrabPoint"]
points = PackedVector2Array(-5, -1, -3, -5, 3, -5, 5, -1)
width = 4.0
default_color = Color(0.529412, 1, 1, 1)
joint_mode = 1

[node name="Line2D2" type="Line2D" parent="GrabPoint"]
scale = Vector2(1, -1)
points = PackedVector2Array(-5, -1, -3, -5, 3, -5, 5, -1)
width = 4.0
default_color = Color(0.529412, 1, 1, 1)
joint_mode = 1

[node name="LockInBullet" type="Area2D" parent="GrabPoint"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabPoint/LockInBullet"]
shape = SubResource("CircleShape2D_ts3df")

[connection signal="body_entered" from="GrabPoint/LockInBullet" to="." method="_on_lock_in_bullet_body_entered"]
